[tool.poetry]
name = "common"
version = "0.1.0"
description = ""
authors = ["Marc Ende <me@e-beyond.de>"]
license = "none"
packages = [{ include = "common", from = "src" }]

[tool.poetry.dependencies]
python = "^3.13"
pulumi = "^3.35.3"
pulumi-hcloud = "1.20.0"
icecream = "^2.0.0"
pulumi-aws = "^6.61.0"
parver = "0.3.0"


[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
mypy = "^1.0.0"
black = "^21.6b0"
isort = "^5.9.3"
ruff = "^0.8.1"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "C90"]
ignore = ["E501"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
